Fixed the http jinja lab 5

--- a/lab-05-roles/roles/httpd/templates/httpd.conf.j2
+++ b/lab-05-roles/roles/httpd/templates/httpd.conf.j2
@@ -1,15 +1,16 @@
 
 ServerRoot "/etc/httpd"
 
-{% if env == 'dev' -%}
+{% if env == 'dev' %}
 Listen 80
-{%- elif env == 'uat' -%}
-Listen 81
-{%- elif env == 'prod' -%}
-Listen 82
-{% endif -%}
 
-#
+{% elif env == 'uat' %}
+Listen 8080
+
+{% elif env == 'prod' %}
+Listen 8090
+{% endif %}
+
 Include conf.modules.d/*.conf
 
 User apache
